--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,12 +27,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
+
   shared_preferences: ^0.5.8
-  google_sign_in: ^4.5.1
+  # google_sign_in: ^4.5.1
   firebase_auth: ^0.16.1
-  random_string: ^2.1.0
+  # random_string: ^2.1.0
   cloud_firestore: ^0.13.7
-  english_words: ^3.1.5
 
 dev_dependencies:
   flutter_test:
@@ -47,8 +47,10 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
