--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,11 @@ dependencies:
   cupertino_icons: ^0.1.3
 
   shared_preferences: ^0.5.8
-  # google_sign_in: ^4.5.1
+  google_sign_in: ^4.5.1
   firebase_auth: ^0.16.1
   # random_string: ^2.1.0
   cloud_firestore: ^0.13.7
+  fluttertoast: ^7.0.1
 
 dev_dependencies:
   flutter_test:
